# ihk

cokernel/smp/arm64/: setup.c
linux/core/: host_driver.c
linux/driver/smp/: smp-driver.c
linux/driver/smp/arch/arm64/: smp-arch-driver.c
linux/driver/smp/arch/x86_64/: smp-arch-driver.c
linux/include/ihk/: ihk_host_user.h  ihklib.h  ihklib_private.h
linux/user/: ihkconfig.c  ihklib.c
test/ihklib/blackbox/: .CMakeLists.txt.swp  CMakeLists.txt  memo
test/ihklib/blackbox/dev/cpu/: 001.sh  001_lin.c  002_lin.c
test/ihklib/blackbox/driver/: Makefile  test_driver.c
test/ihklib/blackbox/include/: #input_vector.h#  check.h  cpu.h  init_fini.h  input_vector.h  linux.h  mckernel.h  mem.h  mod.h  okng.h  os.h  perf.h  user.h  util.h
test/ihklib/blackbox/src/: #ihk_os_assign_cpu04.c#  .cpu.c.swp  .ihk_create_os01.c.swp  .rmmod.c.swp  001_lin.c  002_lin.c  check.c  check_dump.awk  consume_cpu_time.c  count.c  cpu.c  ihk_create_os01.c  ihk_create_os01.sh.in  ihk_create_os02.c  ihk_create_os02.sh.in  ihk_create_os05.c  ihk_create_os05.sh.in  ihk_create_os06.c  ihk_create_os06.sh.in  ihk_destroy_os01.c  ihk_destroy_os01.sh.in  ihk_destroy_os03.c  ihk_destroy_os03.sh.in  ihk_destroy_os05.c  ihk_destroy_os05.sh.in  ihk_destroy_os06.c  ihk_destroy_os06.sh.in  ihk_destroy_os07.c  ihk_destroy_os07.sh.in  ihk_destroy_os08.c  ihk_destroy_os08.sh.in  ihk_destroy_os09.c  ihk_destroy_os09.sh.in  ihk_destroy_os10.c  ihk_destroy_os10.sh.in  ihk_get_num_os_instances01.c  ihk_get_num_os_instances01.sh.in  ihk_get_num_os_instances02.c  ihk_get_num_os_instances02.sh.in  ihk_get_num_os_instances03.c  (+520 more)
test/ihklib/blackbox/src/dev/cpu/: 001_lin.c
test/ihklib/blackbox/src/dev_manage_cpu/: 001_lin.c
test/issues/1359/: 1359.c
